--- a/app/src/main/res/layout/buy_inputs_checkout.xml
+++ b/app/src/main/res/layout/buy_inputs_checkout.xml
@@ -27,7 +27,7 @@
                 android:id="@+id/shipping_address_cardview"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="10dp">
+                android:layout_marginTop="5dp">
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -59,14 +59,15 @@
                             android:background="@android:color/transparent"
                             android:tint="@color/colorAccent"
                             android:visibility="gone"
-                            app:srcCompat="@drawable/ic_edit_profile" />
+                            app:srcCompat="@drawable/ic_edit_profile"
+                            card_view:ignore="VectorDrawableCompat" />
 
                     </RelativeLayout>
 
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:background="@drawable/rounded_gray_background"
+                        android:background="@drawable/rounded_corners_edittext_white"
                         android:orientation="vertical"
                         android:padding="5dp">
 
@@ -343,13 +344,14 @@
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/checkout_coupons_recycler"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"/>
 
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:paddingStart="5dp"
-                android:paddingTop="5dp"
+                android:layout_marginTop="10dp"
+                android:padding="5dp"
                 android:text="@string/promo_code"
                 android:textColor="@color/textColorSecondaryDark"
                 android:textSize="18sp"
