--- a/app/src/main/res/layout/buy_inputs_order_details.xml
+++ b/app/src/main/res/layout/buy_inputs_order_details.xml
@@ -8,9 +8,21 @@
     android:clickable="true"
     android:focusable="true"
     android:background="@color/windowBackground"
-    android:paddingTop="?actionBarSize"
     android:paddingBottom="?actionBarSize">
+    <com.google.android.material.appbar.AppBarLayout
+        android:id="@+id/order_details_app_bar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/colorPrimary"
+        android:theme="@style/AppTheme.AppBarOverlay">
 
+        <androidx.appcompat.widget.Toolbar
+            android:id="@+id/toolbar_product_home"
+            android:layout_width="match_parent"
+            android:layout_height="?actionBarSize"
+            app:popupTheme="@style/AppTheme.PopupOverlay"/>
+
+    </com.google.android.material.appbar.AppBarLayout>
     <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
         android:layout_height="0dip"
@@ -261,13 +273,13 @@
                 app:cardCornerRadius="2dp"
                 card_view:cardCornerRadius="2dp"
                 card_view:cardUseCompatPadding="true"
-                card_view:cardPreventCornerOverlap="false" >
+                card_view:cardPreventCornerOverlap="false"
+                android:visibility="gone">
 
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:orientation="vertical"
-                    android:visibility="gone">
+                    android:orientation="vertical">
 
                     <TextView
                         android:layout_width="match_parent"
@@ -660,7 +672,8 @@
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/checkout_coupons_recycler"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"/>
 
 
             <androidx.cardview.widget.CardView
