--- a/app/src/main/res/layout/fragment_payment_methods.xml
+++ b/app/src/main/res/layout/fragment_payment_methods.xml
@@ -415,133 +415,192 @@
                 android:visibility="gone"
                 app:layout_constraintTop_toBottomOf="@id/radio_btn_visa_card">
 
+
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:orientation="vertical"
-                    android:padding="@dimen/dimen_10dp">
-                    <com.braintreepayments.cardform.view.SupportedCardTypesView
-                        android:id="@+id/supported_card_types"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:gravity="center"
-                        android:layout_marginTop="5dp" />
+                    android:layout_marginBottom="10dp"
+                    android:orientation="vertical">
 
                     <TextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginBottom="4dp"
-                        android:text="@string/account_number"
-                        android:textColor="#515C6F"
-                        android:textSize="@dimen/dimen_16sp" />
+                        android:text="Select Card"
+                        android:textSize="16sp"
+                        android:fontFamily="@font/josefin_sans" />
 
-                    <EditText
-                        android:id="@+id/txt_visa_card_account_number"
+
+
+                    <RelativeLayout
                         android:layout_width="match_parent"
-                        android:layout_height="50dp"
+                        android:layout_height="45dp"
+                        android:layout_marginTop="5dp"
                         android:background="@drawable/edittext_corner"
-                        android:inputType="number"
-                        android:paddingLeft="@dimen/dimen_15sp"
-                        android:textAlignment="viewStart"
-                        android:textColor="@color/textColor" />
+                        android:orientation="horizontal">
+
+                        <Spinner
+                            android:id="@+id/spinner_select_card"
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:layout_centerVertical="true"
+                            android:layout_gravity="center"
+                            android:background="@android:color/transparent"
+                            android:gravity="center"
+                            android:spinnerMode="dropdown"/>
+
+                        <ImageView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_alignParentRight="true"
+                            android:layout_alignParentEnd="true"
+                            android:layout_marginEnd="8dp"
+                            android:layout_marginRight="10dp"
+                            android:layout_centerVertical="true"
+                            android:layout_gravity="center"
+                            android:src="@drawable/ic_chevron_down" />
+
+                    </RelativeLayout>
 
                 </LinearLayout>
 
                 <LinearLayout
+                    android:id="@+id/card_details_layout"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="vertical"
-                    android:paddingStart="@dimen/dimen_10dp"
-                    android:paddingEnd="@dimen/dimen_10dp"
-                    android:paddingBottom="@dimen/dimen_10dp">
-
-                    <TextView
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginBottom="4dp"
-                        android:text="@string/card_number"
-                        android:textColor="#515C6F"
-                        android:textSize="@dimen/dimen_16sp" />
-
-                    <EditText
-                        android:id="@+id/txt_visa_card_number"
-                        android:layout_width="match_parent"
-                        android:layout_height="50dp"
-                        android:background="@drawable/edittext_corner"
-                        android:inputType="number"
-                        android:maxLength="16"
-                        android:paddingLeft="@dimen/dimen_15sp"
-                        android:textAlignment="viewStart"
-                        android:textColor="@color/textColor" />
-
-                </LinearLayout>
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal"
-                    android:paddingStart="@dimen/dimen_10dp"
-                    android:paddingEnd="@dimen/dimen_10dp"
-                    android:paddingBottom="@dimen/dimen_10dp">
-
+                    android:visibility="gone">
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginEnd="@dimen/dimen_10dp"
-                        android:layout_weight="1"
+                        android:layout_marginBottom="10dp"
                         android:orientation="vertical">
+
+                        <com.braintreepayments.cardform.view.SupportedCardTypesView
+                            android:id="@+id/supported_card_types"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:gravity="center"
+                            android:layout_marginTop="5dp" />
 
                         <TextView
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:layout_marginBottom="4dp"
-                            android:fontFamily="@font/josefin_sans"
-                            android:text="@string/card_expiry"
-                            android:textColor="#515C6F"
-                            android:textSize="@dimen/dimen_16sp" />
+                            android:text="Holder Name"
+                            android:textSize="16sp"
+                            android:fontFamily="@font/josefin_sans" />
 
                         <EditText
-                            android:id="@+id/visa_card_expiry"
+                            android:id="@+id/visa_holder_name"
                             android:layout_width="match_parent"
-                            android:layout_height="50dp"
+                            android:layout_height="45dp"
+                            android:paddingStart="@dimen/dimen_10dp"
                             android:background="@drawable/edittext_corner"
-                            android:drawableEnd="@drawable/ic_calendar"
-                            android:fontFamily="@font/josefin_sans"
-                            android:gravity="start|center_vertical"
-                            android:padding="10dp"
-                            android:textAlignment="viewStart" />
-
-                    </LinearLayout>
-
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginStart="@dimen/dimen_10dp"
-                        android:layout_weight="1"
-                        android:orientation="vertical">
-
-                        <TextView
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:layout_marginBottom="4dp"
-                            android:fontFamily="@font/josefin_sans"
-                            android:text="@string/card_cvv"
-                            android:textColor="#515C6F"
-                            android:textSize="@dimen/dimen_16sp" />
-
-                        <EditText
-                            android:id="@+id/visa_card_cvv"
-                            android:layout_width="match_parent"
-                            android:layout_height="50dp"
-                            android:background="@drawable/edittext_corner"
-                            android:fontFamily="@font/josefin_sans"
+                            android:textColor="@color/textColor"
+                            android:layout_marginTop="5dp"
                             android:inputType="text"
-                            android:maxLength="3"
-                            android:paddingStart="10dp"
-                            android:textAlignment="viewStart" />
+                            android:drawablePadding="@dimen/dimen_5dp"/>
 
                     </LinearLayout>
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginBottom="10dp"
+                        android:orientation="vertical">
+
+                        <TextView
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:text="Card Number"
+                            android:textSize="16sp"
+                            android:fontFamily="@font/josefin_sans" />
+
+                        <EditText
+                            android:id="@+id/visa_card_number"
+                            android:layout_width="match_parent"
+                            android:layout_height="45dp"
+                            android:paddingStart="@dimen/dimen_10dp"
+                            android:background="@drawable/edittext_corner"
+                            android:inputType="number"
+                            android:textColor="@color/textColor"
+                            android:layout_marginTop="5dp"
+                            android:maxLength="19"
+                            android:drawablePadding="@dimen/dimen_5dp"/>
+                    </LinearLayout>
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginBottom="10dp"
+                        android:orientation="horizontal"
+                        android:layout_weight="1">
+
+
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="0.5"
+                            android:layout_marginRight="10dp"
+                            android:orientation="vertical">
+
+                            <TextView
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:text="Card Expiry"
+                                android:textSize="16sp"
+                                android:fontFamily="@font/josefin_sans" />
+
+                            <EditText
+                                android:id="@+id/visa_card_expiry"
+                                android:layout_width="match_parent"
+                                android:layout_height="45dp"
+                                android:paddingStart="@dimen/dimen_10dp"
+                                android:background="@drawable/edittext_corner"
+                                android:inputType="date"
+                                android:maxLength="5"
+                                android:textColor="@color/textColor"
+                                android:layout_marginTop="5dp"
+                                android:drawablePadding="@dimen/dimen_5dp"/>
+                        </LinearLayout>
+
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="0.5"
+                            android:layout_marginLeft="10dp"
+                            android:orientation="vertical">
+
+                            <TextView
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:text="Card CVV"
+                                android:textSize="16sp"
+                                android:fontFamily="@font/josefin_sans" />
+
+                            <EditText
+                                android:id="@+id/visa_card_cvv"
+                                android:layout_width="match_parent"
+                                android:layout_height="45dp"
+                                android:paddingStart="@dimen/dimen_10dp"
+                                android:background="@drawable/edittext_corner"
+                                android:inputType="number"
+                                android:textColor="@color/textColor"
+                                android:layout_marginTop="5dp"
+                                android:maxLength="3"
+                                android:drawablePadding="@dimen/dimen_5dp"/>
+                        </LinearLayout>
+
+
+                    </LinearLayout>
+                    <CheckBox
+                        android:id="@+id/checkbox_save_card"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:text="Save Card"
+                        android:textSize="14sp"
+                        android:layout_gravity="end"/>
                 </LinearLayout>
+
             </LinearLayout>
 
         </androidx.constraintlayout.widget.ConstraintLayout>
